crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__redis_reconciliation_reuses_ready_prefix_allocation.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    (
        [
            ResourceAllocationRecord {
                id: "allocation_000001",
                project_id: "<project_id>",
                resource_name: "redis",
                track: "7.2",
                allocation_name: "cache",
                generated_name: "acme-test-cache-",
                env: {
                    "host": "127.0.0.1",
                    "port": "<redis_port>",
                    "prefix": "acme-test-cache-",
                    "url": "redis://127.0.0.1:<redis_port>/0",
                },
                status: Ready,
                created_at: "<timestamp>",
                updated_at: "<timestamp>",
            },
        ],
        ProjectEnvStateContext {
            project_id: "<project_id>",
            primary_hostname: Some(
                "acme.test",
            ),
            resources: {
                "redis": ProjectEnvResourceContext {
                    track: "7.2",
                    values: {
                        "host": "127.0.0.1",
                        "port": "<redis_port>",
                        "url": "redis://127.0.0.1:<redis_port>/0",
                    },
                    allocations: {
                        "cache": ProjectEnvAllocationContext {
                            generated_name: "acme-test-cache-",
                            values: {
                                "host": "127.0.0.1",
                                "port": "<redis_port>",
                                "prefix": "acme-test-cache-",
                                "url": "redis://127.0.0.1:<redis_port>/0",
                            },
                        },
                    },
                },
            },
        },
    ),
    (
        [
            ResourceAllocationRecord {
                id: "allocation_000001",
                project_id: "<project_id>",
                resource_name: "redis",
                track: "7.2",
                allocation_name: "cache",
                generated_name: "acme-test-cache-",
                env: {
                    "host": "127.0.0.1",
                    "port": "<redis_port>",
                    "prefix": "acme-test-cache-",
                    "url": "redis://127.0.0.1:<redis_port>/0",
                },
                status: Ready,
                created_at: "<timestamp>",
                updated_at: "<timestamp>",
            },
        ],
        ProjectEnvStateContext {
            project_id: "<project_id>",
            primary_hostname: Some(
                "acme.test",
            ),
            resources: {
                "redis": ProjectEnvResourceContext {
                    track: "7.2",
                    values: {
                        "host": "127.0.0.1",
                        "port": "<redis_port>",
                        "url": "redis://127.0.0.1:<redis_port>/0",
                    },
                    allocations: {
                        "cache": ProjectEnvAllocationContext {
                            generated_name: "acme-test-cache-",
                            values: {
                                "host": "127.0.0.1",
                                "port": "<redis_port>",
                                "prefix": "acme-test-cache-",
                                "url": "redis://127.0.0.1:<redis_port>/0",
                            },
                        },
                    },
                },
            },
        },
    ),
)
