crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__rustfs_port_reassignment_renders_current_endpoint_for_ready_allocation.snap
---
source: crates/daemon/src/managed_resources/tests.rs
expression: snapshot
---
(
    "# >>> PV MANAGED\nAWS_ACCESS_KEY_ID=pv-rustfs\nAWS_BUCKET=acme-test-uploads\nAWS_ENDPOINT=http://127.0.0.1:<api_port>\nAWS_SECRET_ACCESS_KEY=<secret_key>\nAWS_URL=http://127.0.0.1:<api_port>\nS3_ACCESS_KEY=pv-rustfs\nS3_ENDPOINT=http://127.0.0.1:<api_port>\nS3_SECRET_KEY=<secret_key>\n# <<< PV MANAGED\n",
    ManagedResourceTrackRecord {
        resource_name: "rustfs",
        track: "1.0",
        desired_state: Installed,
        installed_version: Some(
            "1.0.0-pv1",
        ),
        current_artifact_path: Some(
            "<tempdir>/home/.pv/resources/rustfs/1.0/releases/1.0.0-pv1",
        ),
        env: {
            "access_key": "pv-rustfs",
            "endpoint": "http://127.0.0.1:<api_port>",
            "host": "127.0.0.1",
            "port": "<api_port>",
            "secret_key": "<secret_key>",
            "url": "http://127.0.0.1:<api_port>",
        },
        usage_count: 1,
        removal_prune: false,
        removal_force: false,
        updated_at: "<timestamp>",
    },
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "rustfs",
            track: "1.0",
            allocation_name: "uploads",
            generated_name: "acme-test-uploads",
            env: {
                "bucket": "acme-test-uploads",
            },
            status: Ready,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    [
        PortAssignment {
            owner: Resource {
                name: "rustfs",
                track: "1.0",
                port: "api",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
        PortAssignment {
            owner: Resource {
                name: "rustfs",
                track: "1.0",
                port: "console",
            },
            port: <port>,
            updated_at: "<timestamp>",
        },
    ],
    [
        RuntimeObservedStateRecord {
            subject: Resource {
                name: "rustfs",
                track: "1.0",
            },
            status: Running,
            message: Some(
                "Managed Resource runtime is ready",
            ),
            observed_at: "<timestamp>",
        },
    ],
)
