crates/daemon/src/managed_resources/snapshots/daemon__managed_resources__tests__rustfs_runtime_receives_private_credentials_without_persisting_them.snap
---
source: crates/daemon/src/managed_resources/tests.rs
assertion_line: 8681
expression: snapshot
---
(
    RustfsRuntimeCredentialSnapshot {
        recorded_access_key: "pv-rustfs",
        recorded_secret_key: "<secret_key>",
        runtime_metadata: RustfsRuntimeMetadataSnapshot {
            name: "rustfs-1.0",
            command: "<tempdir>/home/.pv/resources/rustfs/1.0/releases/1.0.0-pv1/bin/rustfs",
            arguments: [
                "--address",
                "127.0.0.1:<port>",
                "--console-address",
                "127.0.0.1:<port>",
                "<tempdir>/home/.pv/resources/rustfs/1.0/data",
            ],
            config_path: "<tempdir>/home/.pv/config/resources/rustfs/1.0.json",
            resource_name: "rustfs",
            track: "1.0",
            log_path: "<tempdir>/home/.pv/logs/resources/rustfs/1.0.log",
        },
    },
    RustfsRuntimeCredentialSnapshot {
        recorded_access_key: "pv-rustfs",
        recorded_secret_key: "<secret_key>",
        runtime_metadata: RustfsRuntimeMetadataSnapshot {
            name: "rustfs-1.0",
            command: "<tempdir>/home/.pv/resources/rustfs/1.0/releases/1.0.0-pv1/bin/rustfs",
            arguments: [
                "--address",
                "127.0.0.1:<port>",
                "--console-address",
                "127.0.0.1:<port>",
                "<tempdir>/home/.pv/resources/rustfs/1.0/data",
            ],
            config_path: "<tempdir>/home/.pv/config/resources/rustfs/1.0.json",
            resource_name: "rustfs",
            track: "1.0",
            log_path: "<tempdir>/home/.pv/logs/resources/rustfs/1.0.log",
        },
    },
)
